@@ -4,6 +4,8 @@ Version 1.6+svn:
  * FormulaAI:
    * Fixed bug #13230: added debug_float FormulaAI function to allow debugging
      via floating popups on the specified hex
+ * WML Engine:
+   * Added [show_objectives] tag (part of bug #13042)
 
 Version 1.6a:
  * User interface:
